--- a/index.html
+++ b/index.html
@@ -3,16 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Componentes con Bootstrap Puro</title>
-    <!-- Incluir el CSS de Bootstrap desde CDN -->
+    <title>Galería de Arte Abstracto - Letreros Tallados</title>
+    <!-- Bootstrap CSS desde CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        /* Definir estilo para el logo */
+        .navbar-brand {
+            font-family: 'Times New Roman', Times, serif;
+            font-size: 1.8rem;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
 
     <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Mi Página</a>
+            <!-- Nombre del logo estilizado -->
+            <a class="navbar-brand" href="#">Letreros Tallados</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -22,72 +31,59 @@
                         <a class="nav-link" href="#">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Acerca</a>
+                        <a class="nav-link" href="#galeria">Galería</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="#contacto">Contacto</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!-- Formulario de Contacto -->
-    <div class="container my-5">
-        <h2 class="mb-4">Formulario de Contacto</h2>
-        <form>
-            <div class="mb-3">
-                <label for="name" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="name" placeholder="Tu nombre">
-            </div>
-            <div class="mb-3">
-                <label for="email" class="form-label">Correo Electrónico</label>
-                <input type="email" class="form-control" id="email" placeholder="Tu correo">
-            </div>
-            <div class="mb-3">
-                <label for="message" class="form-label">Mensaje</label>
-                <textarea class="form-control" id="message" rows="4" placeholder="Escribe tu mensaje aquí"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
-        </form>
-    </div>
+    <!-- Hero Section -->
+    <header class="bg-dark text-white text-center py-5">
+        <h1 class="display-4">Explora el Arte Abstracto</h1>
+        <p class="lead">Sumérgete en el mundo del color, la forma y la expresión.</p>
+        <a href="#galeria" class="btn btn-primary">Ver Galería</a>
+    </header>
 
-    <!-- Sección de Tarjetas -->
-    <div class="container my-5">
-        <h2 class="mb-4">Tarjetas Informativas</h2>
+    <!-- Sección de la Galería -->
+    <section id="galeria" class="container my-5">
+        <h2 class="text-center mb-4">Galería de Obras</h2>
         <div class="row g-4">
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Imagen">
+                    <img src="https://via.placeholder.com/300x400" class="card-img-top" alt="Arte Abstracto 1">
                     <div class="card-body">
-                        <h5 class="card-title">Título de la Tarjeta 1</h5>
-                        <p class="card-text">Descripción breve de la tarjeta para explicar el contenido relevante.</p>
-                        <a href="#" class="btn btn-primary">Leer Más</a>
+                        <h5 class="card-title">Obra Abstracta 1</h5>
+                        <p class="card-text">Colores vibrantes que representan la energía y el movimiento.</p>
+                        <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#modalObra1">Ver Más</button>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Imagen">
+                    <img src="https://via.placeholder.com/300x400" class="card-img-top" alt="Arte Abstracto 2">
                     <div class="card-body">
-                        <h5 class="card-title">Título de la Tarjeta 2</h5>
-                        <p class="card-text">Otra descripción breve para la tarjeta número 2.</p>
-                        <a href="#" class="btn btn-secondary">Leer Más</a>
+                        <h5 class="card-title">Obra Abstracta 2</h5>
+                        <p class="card-text">Expresión del contraste entre calma y caos a través de formas geométricas.</p>
+                        <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#modalObra2">Ver Más</button>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Imagen">
+                    <img src="https://via.placeholder.com/300x400" class="card-img-top" alt="Arte Abstracto 3">
                     <div class="card-body">
-                        <h5 class="card-title">Título de la Tarjeta 3</h5>
-                        <p class="card-text">Contenido adicional para experimentar con componentes de Bootstrap.</p>
-                        <a href="#" class="btn btn-success">Leer Más</a>
+                        <h5 class="card-title">Obra Abstracta 3</h5>
+                        <p class="card-text">Formas orgánicas y colores cálidos que evocan una sensación de rusticidad.</p>
+                        <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#modalObra3">Ver Más</button>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- JavaScript de Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
