--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <style>
         /* Definir estilo para el logo */
         .navbar-brand {
-            font-family: 'Times New Roman', Times, serif;
-            font-size: 1.8rem;
-            font-weight: bold;
+            font-family: 'Garamond', 'Georgia', serif;
+            font-size: 2rem;
+            font-weight: 600;
+            letter-spacing: 2px;
         }
     </style>
 </head>
