--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galería de Arte Abstracto - Letreros Tallados</title>
+    <title>Galería de Arte Abstracto - Tallados El Prodigio</title>
     <!-- Bootstrap CSS desde CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <style>
         /* Definir estilo para el logo */
         .navbar-brand {
-            font-family: 'Garamond', 'Georgia', serif;
+            font-family: 'Montserrat', sans-serif;
             font-size: 2rem;
-            font-weight: 600;
-            letter-spacing: 2px;
+            font-weight: 700;
+            letter-spacing: 1.5px;
         }
     </style>
 </head>
@@ -22,7 +23,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <!-- Nombre del logo estilizado -->
-            <a class="navbar-brand" href="#">Letreros Tallados</a>
+            <a class="navbar-brand" href="#">Tallados El Prodigio</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -44,8 +45,8 @@
 
     <!-- Hero Section -->
     <header class="bg-dark text-white text-center py-5">
-        <h1 class="display-4">Explora el Arte Abstracto</h1>
-        <p class="lead">Sumérgete en el mundo del color, la forma y la expresión.</p>
+        <h1 class="display-4">Descubre Nuestro Proyecto</h1>
+        <p class="lead">Un viaje íntimo entre formas, detalles y emociones únicas.</p>
         <a href="#galeria" class="btn btn-primary">Ver Galería</a>
     </header>
 
