--- a/index.html
+++ b/index.html
@@ -6,14 +6,20 @@
     <title>Galería de Arte Abstracto - Tallados El Prodigio</title>
     <!-- Bootstrap CSS desde CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+    
     <style>
         /* Definir estilo para el logo */
         .navbar-brand {
-            font-family: 'Montserrat', sans-serif;
+            font-family: 'Lucida Sans', Arial, sans-serif;
             font-size: 2rem;
             font-weight: 700;
             letter-spacing: 1.5px;
+        }
+        .navbar-subtitle {
+            font-family: 'Lucida Sans', Arial, sans-serif;
+            font-size: 1rem;
+            font-weight: 400;
+            letter-spacing: 1px;
         }
     </style>
 </head>
@@ -22,8 +28,11 @@
     <!-- Barra de navegación -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <!-- Nombre del logo estilizado -->
-            <a class="navbar-brand" href="#">Tallados El Prodigio</a>
+            <!-- Nombre del logo estilizado con subtítulo -->
+            <a class="navbar-brand" href="#">
+                Tallados
+                <div class="navbar-subtitle">El Prodigio</div>
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
