--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Galería de Arte Abstracto - Tallados El Prodigio</title>
     <!-- Bootstrap CSS desde CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
         /* Definir estilo para el logo */
         .navbar-brand {
@@ -21,6 +21,12 @@
             font-weight: 400;
             letter-spacing: 1px;
         }
+        .content {
+            display: none;
+        }
+        .active {
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -29,7 +35,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <!-- Nombre del logo estilizado con subtítulo -->
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="#" onclick="navigate('inicio')">
                 Tallados
                 <div class="navbar-subtitle">El Prodigio</div>
             </a>
@@ -39,13 +45,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Inicio</a>
+                        <a class="nav-link" href="#" onclick="navigate('inicio')">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#galeria">Galería</a>
+                        <a class="nav-link" href="#" onclick="navigate('galeria')">Galería</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#contacto">Contacto</a>
+                        <a class="nav-link" href="#" onclick="navigate('contacto')">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -53,14 +59,14 @@
     </nav>
 
     <!-- Hero Section -->
-    <header class="bg-dark text-white text-center py-5">
+    <section id="inicio" class="content active bg-dark text-white text-center py-5">
         <h1 class="display-4">Descubre Nuestro Proyecto</h1>
         <p class="lead">Un viaje íntimo entre formas, detalles y emociones únicas.</p>
-        <a href="#galeria" class="btn btn-primary">Ver Galería</a>
-    </header>
+        <a href="#" class="btn btn-primary" onclick="navigate('galeria')">Ver Galería</a>
+    </section>
 
     <!-- Sección de la Galería -->
-    <section id="galeria" class="container my-5">
+    <section id="galeria" class="content container my-5">
         <h2 class="text-center mb-4">Galería de Obras</h2>
         <div class="row g-4">
             <div class="col-md-4">
@@ -95,6 +101,23 @@
             </div>
         </div>
     </section>
+
+    <!-- Sección de Contacto -->
+    <section id="contacto" class="content container my-5">
+        <h2 class="text-center mb-4">Contacto</h2>
+        <p class="text-center">Para más información, comunícate con nosotros a través de nuestras redes sociales o envíanos un mensaje.</p>
+    </section>
+
+    <!-- JavaScript para manejar la navegación de SPA -->
+    <script>
+        function navigate(sectionId) {
+            const sections = document.querySelectorAll('.content');
+            sections.forEach(section => {
+                section.classList.remove('active');
+            });
+            document.getElementById(sectionId).classList.add('active');
+        }
+    </script>
 
     <!-- JavaScript de Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
