--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="row g-4">
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x400" class="card-img-top" alt="Arte Abstracto 1">
+                    <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Arte Abstracto 1">
                     <div class="card-body">
                         <h5 class="card-title">Obra Abstracta 1</h5>
                         <p class="card-text">Colores vibrantes que representan la energía y el movimiento.</p>
@@ -81,7 +81,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x400" class="card-img-top" alt="Arte Abstracto 2">
+                    <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Arte Abstracto 2">
                     <div class="card-body">
                         <h5 class="card-title">Obra Abstracta 2</h5>
                         <p class="card-text">Expresión del contraste entre calma y caos a través de formas geométricas.</p>
@@ -91,7 +91,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card">
-                    <img src="https://via.placeholder.com/300x400" class="card-img-top" alt="Arte Abstracto 3">
+                    <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Arte Abstracto 3">
                     <div class="card-body">
                         <h5 class="card-title">Obra Abstracta 3</h5>
                         <p class="card-text">Formas orgánicas y colores cálidos que evocan una sensación de rusticidad.</p>
@@ -121,5 +121,17 @@
 
     <!-- JavaScript de Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Pie de página -->
+    <footer class="bg-dark text-white text-center py-4">
+        <div class="container">
+            <p class="mb-1">&copy; 2024 Tallados El Prodigio. Todos los derechos reservados.</p>
+            <p>Síguenos en:
+                <a href="#" class="text-white mx-2"><i class="fab fa-facebook"></i></a>
+                <a href="#" class="text-white mx-2"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="text-white mx-2"><i class="fab fa-twitter"></i></a>
+            </p>
+        </div>
+    </footer>
+
 </body>
 </html>
