--- a/index.html
+++ b/index.html
@@ -69,10 +69,33 @@
                 </ul>
                 <h4>Precio:</h4>
                 <p><strong>$2,500 MXN</strong></p>
-                <button class="btn btn-primary mt-3">Contactar para Adquirir</button>
+                <a href="detalle.html" class="btn btn-primary mt-3">Ver Más</a>
             </div>
         </div>
     </section>
+
+    <!-- Pie de página -->
+    <footer class="bg-dark text-white text-center py-4">
+        <div class="container">
+            <p class="mb-1">&copy; 2024 Tallados El Prodigio. Todos los derechos reservados.</p>
+            <p>Síguenos en:
+                <a href="#" class="text-white mx-2"><i class="fab fa-facebook"></i></a>
+                <a href="#" class="text-white mx-2"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="text-white mx-2"><i class="fab fa-twitter"></i></a>
+            </p>
+        </div>
+    </footer>
+
+    <!-- JavaScript de Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+                        </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Pie de página -->
     <footer class="bg-dark text-white text-center py-4">
