--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalle de la Obra - Tallados El Prodigio</title>
+    <title>Galería de Arte Abstracto - Tallados El Prodigio</title>
     <!-- Bootstrap CSS desde CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
@@ -20,6 +20,12 @@
             font-weight: 400;
             letter-spacing: 1px;
         }
+        .content {
+            display: none;
+        }
+        .active {
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -28,7 +34,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <!-- Nombre del logo estilizado con subtítulo -->
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="#" onclick="navigate('inicio')">
                 Tallados
                 <div class="navbar-subtitle">El Prodigio</div>
             </a>
@@ -38,21 +44,65 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Inicio</a>
+                        <a class="nav-link" href="#" onclick="navigate('inicio')">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#galeria">Galería</a>
+                        <a class="nav-link" href="#" onclick="navigate('galeria')">Galería</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html#contacto">Contacto</a>
+                        <a class="nav-link" href="#" onclick="navigate('contacto')">Contacto</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
+    <!-- Hero Section -->
+    <section id="inicio" class="content active bg-dark text-white text-center py-5">
+        <h1 class="display-4">Descubre Nuestro Proyecto</h1>
+        <p class="lead">Un viaje íntimo entre formas, detalles y emociones únicas.</p>
+        <a href="#" class="btn btn-primary" onclick="navigate('galeria')">Ver Galería</a>
+    </section>
+
+    <!-- Sección de la Galería -->
+    <section id="galeria" class="content container my-5">
+        <h2 class="text-center mb-4">Galería de Obras</h2>
+        <div class="row g-4">
+            <div class="col-md-4">
+                <div class="card" onclick="navigate('detalle')">
+                    <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Arte Abstracto 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Obra Abstracta 1</h5>
+                        <p class="card-text">Colores vibrantes que representan la energía y el movimiento.</p>
+                        <button type="button" class="btn btn-outline-primary" onclick="navigate('detalle')">Ver Más</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card" onclick="navigate('detalle')">
+                    <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Arte Abstracto 2">
+                    <div class="card-body">
+                        <h5 class="card-title">Obra Abstracta 2</h5>
+                        <p class="card-text">Expresión del contraste entre calma y caos a través de formas geométricas.</p>
+                        <button type="button" class="btn btn-outline-primary" onclick="navigate('detalle')">Ver Más</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card" onclick="navigate('detalle')">
+                    <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Arte Abstracto 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Obra Abstracta 3</h5>
+                        <p class="card-text">Formas orgánicas y colores cálidos que evocan una sensación de rusticidad.</p>
+                        <button type="button" class="btn btn-outline-primary" onclick="navigate('detalle')">Ver Más</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Sección de Detalles de la Obra -->
-    <section class="container my-5">
+    <section id="detalle" class="content container my-5">
         <div class="row">
             <div class="col-md-6">
                 <img src="https://via.placeholder.com/800x600" class="img-fluid" alt="Detalle de Obra Abstracta">
@@ -74,6 +124,12 @@
         </div>
     </section>
 
+    <!-- Sección de Contacto -->
+    <section id="contacto" class="content container my-5">
+        <h2 class="text-center mb-4">Contacto</h2>
+        <p class="text-center">Para más información, comunícate con nosotros a través de nuestras redes sociales o envíanos un mensaje.</p>
+    </section>
+
     <!-- Pie de página -->
     <footer class="bg-dark text-white text-center py-4">
         <div class="container">
@@ -85,6 +141,17 @@
             </p>
         </div>
     </footer>
+
+    <!-- JavaScript para manejar la navegación de SPA -->
+    <script>
+        function navigate(sectionId) {
+            const sections = document.querySelectorAll('.content');
+            sections.forEach(section => {
+                section.classList.remove('active');
+            });
+            document.getElementById(sectionId).classList.add('active');
+        }
+    </script>
 
     <!-- JavaScript de Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
