--- a/index.html
+++ b/index.html
@@ -3,157 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galería de Arte Abstracto - Tallados El Prodigio</title>
-    <!-- Bootstrap CSS desde CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <style>
-        .navbar-brand {
-            font-family: 'Lucida Sans', Arial, sans-serif;
-            font-size: 2rem;
-            font-weight: 700;
-            letter-spacing: 1.5px;
-        }
-        .navbar-subtitle {
-            font-family: 'Lucida Sans', Arial, sans-serif;
-            font-size: 1rem;
-            font-weight: 400;
-            letter-spacing: 1px;
-        }
-        .content {
-            display: none;
-        }
-        .active {
-            display: block;
-        }
-    </style>
+    <title>SPA - Tallados El Prodigio</title>
 </head>
 <body>
 
     <!-- Barra de navegación -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <!-- Nombre del logo estilizado con subtítulo -->
-            <a class="navbar-brand" href="#" onclick="navigate('inicio')">
-                Tallados
-                <div class="navbar-subtitle">El Prodigio</div>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" onclick="navigate('inicio')">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" onclick="navigate('galeria')">Galería</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#" onclick="navigate('contacto')">Contacto</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+    <nav>
+        <ul>
+            <li><a href="#" onclick="navigate('inicio')">Inicio</a></li>
+            <li><a href="#" onclick="navigate('galeria')">Galería</a></li>
+            <li><a href="#" onclick="navigate('contacto')">Contacto</a></li>
+        </ul>
     </nav>
 
-    <!-- Hero Section -->
-    <section id="inicio" class="content active bg-dark text-white text-center py-5">
-        <h1 class="display-4">Descubre Nuestro Proyecto</h1>
-        <p class="lead">Un viaje íntimo entre formas, detalles y emociones únicas.</p>
-        <a href="#" class="btn btn-primary" onclick="navigate('galeria')">Ver Galería</a>
+    <!-- Sección de Inicio -->
+    <section id="inicio">
+        <h1>Bienvenido a Tallados El Prodigio</h1>
+        <p>Descubre nuestros mejores tallados en madera con estilo único.</p>
     </section>
 
     <!-- Sección de la Galería -->
-    <section id="galeria" class="content container my-5">
-        <h2 class="text-center mb-4">Galería de Obras</h2>
-        <div class="row g-4">
-            <div class="col-md-4">
-                <div class="card" onclick="navigate('detalle')">
-                    <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Arte Abstracto 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Obra Abstracta 1</h5>
-                        <p class="card-text">Colores vibrantes que representan la energía y el movimiento.</p>
-                        <button type="button" class="btn btn-outline-primary" onclick="navigate('detalle')">Ver Más</button>
-                    </div>
-                </div>
+    <section id="galeria">
+        <h2>Galería de Obras</h2>
+        <div>
+            <div class="tarjeta" onclick="navigate('detalle')">
+                <h3>Obra Abstracta 1</h3>
+                <p>Descripción de la Obra Abstracta 1.</p>
+                <button onclick="navigate('detalle')">Ver Más</button>
             </div>
-            <div class="col-md-4">
-                <div class="card" onclick="navigate('detalle')">
-                    <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Arte Abstracto 2">
-                    <div class="card-body">
-                        <h5 class="card-title">Obra Abstracta 2</h5>
-                        <p class="card-text">Expresión del contraste entre calma y caos a través de formas geométricas.</p>
-                        <button type="button" class="btn btn-outline-primary" onclick="navigate('detalle')">Ver Más</button>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card" onclick="navigate('detalle')">
-                    <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Arte Abstracto 3">
-                    <div class="card-body">
-                        <h5 class="card-title">Obra Abstracta 3</h5>
-                        <p class="card-text">Formas orgánicas y colores cálidos que evocan una sensación de rusticidad.</p>
-                        <button type="button" class="btn btn-outline-primary" onclick="navigate('detalle')">Ver Más</button>
-                    </div>
-                </div>
+            <div class="tarjeta" onclick="navigate('detalle')">
+                <h3>Obra Abstracta 2</h3>
+                <p>Descripción de la Obra Abstracta 2.</p>
+                <button onclick="navigate('detalle')">Ver Más</button>
             </div>
         </div>
     </section>
 
     <!-- Sección de Detalles de la Obra -->
-    <section id="detalle" class="content container my-5">
-        <div class="row">
-            <div class="col-md-6">
-                <img src="https://via.placeholder.com/800x600" class="img-fluid" alt="Detalle de Obra Abstracta">
-            </div>
-            <div class="col-md-6">
-                <h2>Obra Abstracta Detallada</h2>
-                <p class="text-muted">Fecha de creación: 2024</p>
-                <p>Esta obra abstracta presenta una composición vibrante que refleja la energía y el dinamismo del movimiento. Los colores vivos y las formas entrelazadas simbolizan las emociones que surgen de la conexión entre el arte y la naturaleza.</p>
-                <h4>Características:</h4>
-                <ul>
-                    <li>Tamaño: 80x60 cm</li>
-                    <li>Material: Madera tallada y pintada a mano</li>
-                    <li>Estilo: Abstracto rústico</li>
-                </ul>
-                <h4>Precio:</h4>
-                <p><strong>$2,500 MXN</strong></p>
-                <button class="btn btn-primary mt-3">Contactar para Adquirir</button>
-            </div>
-        </div>
+    <section id="detalle">
+        <h2>Detalles de la Obra</h2>
+        <p>Aquí se muestran los detalles específicos de la obra seleccionada.</p>
     </section>
 
     <!-- Sección de Contacto -->
-    <section id="contacto" class="content container my-5">
-        <h2 class="text-center mb-4">Contacto</h2>
-        <p class="text-center">Para más información, comunícate con nosotros a través de nuestras redes sociales o envíanos un mensaje.</p>
+    <section id="contacto">
+        <h2>Contacto</h2>
+        <p>Información de contacto y redes sociales.</p>
     </section>
 
     <!-- Pie de página -->
-    <footer class="bg-dark text-white text-center py-4">
-        <div class="container">
-            <p class="mb-1">&copy; 2024 Tallados El Prodigio. Todos los derechos reservados.</p>
-            <p>Síguenos en:
-                <a href="#" class="text-white mx-2"><i class="fab fa-facebook"></i></a>
-                <a href="#" class="text-white mx-2"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="text-white mx-2"><i class="fab fa-twitter"></i></a>
-            </p>
-        </div>
+    <footer>
+        <p>&copy; 2024 Tallados El Prodigio. Todos los derechos reservados.</p>
     </footer>
 
-    <!-- JavaScript para manejar la navegación de SPA -->
-    <script>
-        function navigate(sectionId) {
-            const sections = document.querySelectorAll('.content');
-            sections.forEach(section => {
-                section.classList.remove('active');
-            });
-            document.getElementById(sectionId).classList.add('active');
-        }
-    </script>
-
-    <!-- JavaScript de Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
