--- a/index.html
+++ b/index.html
@@ -111,16 +111,16 @@
 
     <!-- Sección de la Galería -->
     <section id="galeria">
-        <h2>Galería de Obras</h2>
+        <h2>Galería de Carteles Tallados</h2>
         <div>
             <div class="tarjeta" onclick="navigate('detalle')">
-                <h3>Obra Abstracta 1</h3>
-                <p>Descripción de la Obra Abstracta 1.</p>
+                <h3>Cartel Tallado Rústico 1</h3>
+                <p>Este cartel tallado rústico está hecho a mano, ideal para dar un toque único y acogedor a tu hogar.</p>
                 <button onclick="navigate('detalle')">Ver Más</button>
             </div>
             <div class="tarjeta" onclick="navigate('detalle')">
-                <h3>Obra Abstracta 2</h3>
-                <p>Descripción de la Obra Abstracta 2.</p>
+                <h3>Cartel Tallado Rústico 2</h3>
+                <p>Cartel tallado a mano con diseño personalizado, perfecto para cualquier espacio con un estilo colonial.</p>
                 <button onclick="navigate('detalle')">Ver Más</button>
             </div>
         </div>
@@ -128,8 +128,8 @@
 
     <!-- Sección de Detalles de la Obra -->
     <section id="detalle">
-        <h2>Detalles de la Obra</h2>
-        <p>Aquí se muestran los detalles específicos de la obra seleccionada.</p>
+        <h2>Detalles del Cartel Tallado</h2>
+        <p>Aquí se muestran los detalles específicos del cartel tallado seleccionado, incluyendo dimensiones, material y precio.</p>
     </section>
 
     <!-- Sección de Contacto -->
