--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <div class="row g-4">
         <div class="col-md-4">
             <div class="card" onclick="navigate('detalle')">
+                <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Cartel Tallado">
                 <div class="card-body">
                     <h3 class="card-title">Cartel Tallado Rústico 1</h3>
                     <p class="card-text">Este cartel tallado rústico está hecho a mano, ideal para dar un toque único y acogedor a tu hogar.</p>
@@ -52,6 +53,7 @@
         </div>
         <div class="col-md-4">
             <div class="card" onclick="navigate('detalle')">
+                <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="Cartel Tallado">
                 <div class="card-body">
                     <h3 class="card-title">Cartel Tallado Rústico 2</h3>
                     <p class="card-text">Cartel tallado a mano con diseño personalizado, perfecto para cualquier espacio con un estilo colonial.</p>
@@ -64,6 +66,7 @@
 
     <!-- Sección de Detalles de la Obra -->
     <section id="detalle" class="container my-5">
+    <img src="https://via.placeholder.com/800x600" class="img-fluid mb-4" alt="Detalle del Cartel Tallado">
     <h2>Detalles del Cartel Tallado</h2>
     <p>Aquí se muestran los detalles específicos del cartel tallado seleccionado, incluyendo dimensiones, material y precio.</p>
 </section>
