--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
+            
+                <li class="nav-item">
+                    <a class="nav-link" href="#" onclick="navigate('ubicacion')">Ubicación</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#" onclick="navigate('inicio')">Inicio</a>
                 </li>
@@ -87,7 +90,15 @@
     <p>Aquí se muestran los detalles específicos del cartel tallado seleccionado, incluyendo dimensiones, material y precio.</p>
 </section>
 
-    <!-- Sección de Contacto -->
+    <section id="ubicacion" class="container my-5">
+    <h2 class="text-center mb-4">Ubicación</h2>
+    <p>Nuestros talleres se encuentran en una hermosa zona rural, ideal para la inspiración y la producción artesanal.</p>
+    <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.8354345094287!2d144.95592311532154!3d-37.81720997975195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0xf0727db1e73955ab!2sFederation%20Square!5e0!3m2!1sen!2sau!4v1604890950047!5m2!1sen!2sau" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    </div>
+</section>
+
+
     <section id="contacto" class="container my-5">
     <h2 class="text-center mb-4">Contacto</h2>
     <p>Información de contacto y redes sociales.</p>
