--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="#" onclick="navigate('inicio')">Tallados El Prodigio</a>
-        <button class="navbar-toggler rounded-circle border-0 shadow-sm" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="background-color: rgba(255, 255, 255, 0.8);">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            
-                <li class="nav-item">
-                    <a class="nav-link" href="#" onclick="navigate('ubicacion')">Ubicación</a>
-                </li>
+            <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="#" onclick="navigate('inicio')">Inicio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#" onclick="navigate('galeria')">Galería</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" onclick="navigate('ubicacion')">Ubicación</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#" onclick="navigate('contacto')">Contacto</a>
