--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>SPA - Tallados El Prodigio</title>
     
     
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <main>
@@ -13,28 +14,28 @@
     <!-- Barra de navegación -->
     <nav class="nav-wrapper teal">
     <div class="container">
-        <a href="#" class="brand-logo">Tallados El Prodigio</a>
+        <a href="#" class="brand-logo"><i class="material-icons left">store</i>Tallados El Prodigio</a>
         <ul class="right hide-on-med-and-down">
-            <li><a href="#" onclick="navigate('inicio')">Inicio</a></li>
-            <li><a href="#" onclick="navigate('galeria')">Galería</a></li>
-            <li><a href="#" onclick="navigate('ubicacion')">Ubicación</a></li>
-            <li><a href="#" onclick="navigate('contacto')">Contacto</a></li>
+            <li><a href="#" onclick="navigate('inicio')"><i class="material-icons left">home</i>Inicio</a></li>
+            <li><a href="#" onclick="navigate('trabajos-hechos')"><i class="material-icons left">collections</i>Trabajos Hechos</a></li>
+            <li><a href="#" onclick="navigate('ubicacion')"><i class="material-icons left">place</i>Ubicación</a></li>
+            <li><a href="#" onclick="navigate('contacto')"><i class="material-icons left">contacts</i>Contacto</a></li>
         </ul>
     </div>
 </nav>
 
 <ul class="sidenav" id="mobile-demo">
-    <li><a href="#" onclick="navigate('inicio')">Inicio</a></li>
-    <li><a href="#" onclick="navigate('galeria')">Galería</a></li>
-    <li><a href="#" onclick="navigate('ubicacion')">Ubicación</a></li>
-    <li><a href="#" onclick="navigate('contacto')">Contacto</a></li>
+    <li><a href="#" onclick="navigate('inicio')"><i class="material-icons left">home</i>Inicio</a></li>
+    <li><a href="#" onclick="navigate('trabajos-hechos')"><i class="material-icons left">collections</i>Trabajos Hechos</a></li>
+    <li><a href="#" onclick="navigate('ubicacion')"><i class="material-icons left">place</i>Ubicación</a></li>
+    <li><a href="#" onclick="navigate('contacto')"><i class="material-icons left">contacts</i>Contacto</a></li>
 </ul>
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="#" >Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" >Galería</a>
+                    <a class="nav-link" href="#" >Trabajos Hechos</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#" >Ubicación</a>
@@ -53,9 +54,9 @@
     <p>Descubre nuestros mejores tallados en madera con estilo único.</p>
 </section>
 
-    <!-- Sección de la Galería -->
-    <section id="galeria" class="container my-5">
-    <h2 class="text-center mb-4">Galería de Carteles Tallados</h2>
+    <!-- Sección de la Trabajos Hechos -->
+    <section id="trabajos-hechos" class="container my-5">
+    <h2 class="text-center mb-4">Trabajos Hechos</h2>
     <div class="row g-4">
         <div class="col-md-4">
             <div class="card">
@@ -63,7 +64,7 @@
                 <div class="card-body">
                     <h3 class="card-title">Cartel Tallado Rústico 1</h3>
                     <p class="card-text">Este cartel tallado rústico está hecho a mano, ideal para dar un toque único y acogedor a tu hogar.</p>
-                    <a class="waves-effect waves-light btn">Ver Más</a>
+                    <a class="waves-effect waves-light btn"><i class="material-icons left">visibility</i>Ver Más</a>
                 </div>
             </div>
         </div>
@@ -73,7 +74,7 @@
                 <div class="card-body">
                     <h3 class="card-title">Cartel Tallado Rústico 2</h3>
                     <p class="card-text">Cartel tallado a mano con diseño personalizado, perfecto para cualquier espacio con un estilo colonial.</p>
-                    <a class="waves-effect waves-light btn">Ver Más</a>
+                    <a class="waves-effect waves-light btn"><i class="material-icons left">visibility</i>Ver Más</a>
                 </div>
             </div>
         </div>
