--- a/index.html
+++ b/index.html
@@ -10,9 +10,23 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <style>
+        html, body {
+            height: 100%;
+        }
+        body {
+            display: flex;
+            flex-direction: column;
+        }
+        main {
+            flex: 1;
+        }
+        footer {
+            margin-top: auto;
+        }
         body, h1, h2, h3, h4, h5, h6, p, a {
             font-family: 'Montserrat', sans-serif;
         }
+    </style>
     </style>
 </head>
 <body>
@@ -38,20 +52,7 @@
     <li><a href="#" onclick="navigate('ubicacion')"><i class="material-icons left">place</i>Ubicación</a></li>
     <li><a href="#" onclick="navigate('contacto')"><i class="material-icons left">contacts</i>Contacto</a></li>
 </ul>
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#" >Inicio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#" >Trabajos Hechos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#" >Ubicación</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#" >Contacto</a>
-                </li>
-            </ul>
+            
         </div>
     </div>
 </nav>
@@ -104,7 +105,6 @@
     </div>
 </section>
 
-
     <section id="contacto" class="container my-5">
     <h2 class="text-center mb-4">Contacto</h2>
     <p>Información de contacto y redes sociales.</p>
